--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "object-assign": "^4.1.1",
-    "quill": "^2.0.0-dev.3"
+    "quill": "git+https://github.com/PushyPants/quill.git"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
